# misskey_trans_bot

./: pyproject.toml
work/artifacts/: main.py  makefile  misskey_stream.py  use_gemini.py  use_misskey_get.py  use_misskey_send.py  use_text2speech.py  use_translate.py
